--- a/.github/workflows/master_openerslotion.yml
+++ b/.github/workflows/master_openerslotion.yml
@@ -14,6 +14,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: actions/setup-node@v3  # Replace v3 with the latest stable version
       - uses: actions/checkout@v4
 
       - name: Set up .NET Core
@@ -45,12 +46,12 @@ jobs:
 
     steps:
       - name: Download artifact from build job
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4  # Assuming v4 is compatible with Node.js 20
         with:
           name: .net-app
       
       - name: Login to Azure
-        uses: azure/login@v1
+        uses: azure/login@v2  # Assuming v2 is compatible with Node.js 20
         with:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_58F49A3376A24EC692836E544F284A1F }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_E729BF19899C4B32809752556F1F0712 }}
