Authorization steps error handled done changes in the dbo.AspNetUsers and added role

--- a/Openers_Lotion/appsettings.json
+++ b/Openers_Lotion/appsettings.json
@@ -1,7 +1,11 @@
 {
   "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Openers_LotionContext-d7c325e3-79e5-4215-8612-9a9c6468a623;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "Openers_LotionContext": "Server=(localdb)\\mssqllocaldb;Database=Openers_LotionContext-d7c325e3-79e5-4215-8612-9a9c6468a623;Trusted_Connection=True;MultipleActiveResultSets=true"
+    /*
     "DefaultConnection": "Server=tcp:rohopenerslotion.database.windows.net,1433;Initial Catalog=Openerslotion-DB;Persist Security Info=False;User ID=Roh;Password=HostedByR0h;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;",
     "Openers_LotionContext": "Server=tcp:rohopenerslotion.database.windows.net,1433;Initial Catalog=Openerslotion-DB;Persist Security Info=False;User ID=Roh;Password=HostedByR0h;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
+  */
   },
   "Logging": {
     "LogLevel": {
